--- a/cart/cartService/src/main/resources/application.properties
+++ b/cart/cartService/src/main/resources/application.properties
@@ -2,31 +2,21 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=cartdb
 spring.data.mongodb.repositories.enabled=true
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 
 
-
-server.port=8084
+server.port=8083
 
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
+spring.cloud.compatibility-verifier.enabled=false
 
 #Kafka configuration
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=cart-service
 spring.kafka.consumer.auto-offset-reset=earliest
+cart.kafka.topic=product-updated-topic
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-
-
-
-
-## Redis Configuration
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.timeout=2000ms
-#spring.cache.type=redis
-#spring.cache.redis.time-to-live=600000
