--- a/api-gateway/Gateway/src/main/resources/application.properties
+++ b/api-gateway/Gateway/src/main/resources/application.properties
@@ -1,27 +1,16 @@
-# Server
-server.port=8081
+server.port=8080
+spring.application.name=api-gateway
 
-# JWT Secret
+
+member.service.url=http://localhost:8081
+product.service.url=http://localhost:8082
+cart.service.url=http://localhost:8083
+
+# Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# JWT secret (same across services)
 jwt.secret=bXktc3VwZXItc2VjcmV0LXNob3VsZC1iZS0yNTYtYml0LWxvbmc=
 
-#############################
-# Gateway Routes (Properties)
-#############################
-
-# ---------- Member Service ----------
-spring.cloud.gateway.routes[0].id=member-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8082
-spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-
-# ---------- Product Service ----------
-spring.cloud.gateway.routes[1].id=product-service
-spring.cloud.gateway.routes[1].uri=http://localhost:8083
-spring.cloud.gateway.routes[1].predicates[0]=Path=/product/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-
-# ---------- Cart Service ----------
-spring.cloud.gateway.routes[2].id=cart-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8084
-spring.cloud.gateway.routes[2].predicates[0]=Path=/cart/**
-spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+spring.main.web-application-type=reactive
