--- a/member/memberService/src/main/resources/application.properties
+++ b/member/memberService/src/main/resources/application.properties
@@ -1,34 +1,43 @@
+server.port=8081
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/memberdb
+#spring.datasource.username=memberuser
+#spring.datasource.password=memberpass
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=bpriyanka
 spring.datasource.password=priyanka
 
+# JPA/Hibernate Configuration
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # JWT secret
 jwt.secret=v36DiUOC0BkJfBw+Vp6UCDo+c+8ZqQ/k1U4H0uJOTfA=
+jwt.issuer=member-service
+jwt.expiration-ms=3600000
 
 
-# JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+# Simple security config
+spring.main.allow-bean-definition-overriding=true
 
-spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.properties.hibernate.format_sql=true
 
-server.port=8082
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
 
 
 
 # Swagger/OpenAPI Configuration
-
 springdoc.api-docs.path=/api-docs
-
 springdoc.swagger-ui.path=/swagger-ui.html
-
 springdoc.swagger-ui.enabled=true
+spring.cloud.config.enabled=false
+spring.cloud.config.import-check.enabled=false
 
 
 #spring.cache.type=redis
@@ -37,6 +46,8 @@ springdoc.swagger-ui.enabled=true
 #spring.redis.timeout=6000
 #spring.cache.redis.time-to-live=600000
 ## 10 min TTL
+
+
 
 
 
