--- a/product/productService/src/main/resources/application.properties
+++ b/product/productService/src/main/resources/application.properties
@@ -1,28 +1,28 @@
+server.port=8082
+
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=productdb
+
+
+
 spring.data.mongodb.repositories.enabled=true
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
-
-
-
-server.port=8083
+spring.cloud.config.enabled=false
+spring.cloud.config.import-check.enabled=false
 
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
 
-#Kafka configuration
 
+#Kafka configuration
 spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=product-updated-topic
+product.kafka.topic=product-updated-topic
+
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-
-
-## Redis Configuration
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.timeout=2000ms
-#spring.cache.type=redis
-#spring.cache.redis.time-to-live=600000
+spring.redis.host=localhost
+spring.redis.port=6379
